--- a/notice/templates/notice/news_card_mobile.html
+++ b/notice/templates/notice/news_card_mobile.html
@@ -12,6 +12,7 @@
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{% url 'register:menu' %}">メニュー</a>
+    <a class="navbar-item" href="{% url 'overview:overview' %}">マンション概要</a>
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarMypage">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
@@ -22,10 +23,7 @@
     <div class="navbar-start">
     </div>
     <div class="navbar-end">
-      {% if user.username == 'sophiag' %}
-        <a class="navbar-item" href="{% url 'register:signup' %}">仮登録</a>
-      {% endif %}
-      {% if user.is_superuser %}
+      {% if perms.user.add_user %}
         <a class="navbar-item" href="{% url 'register:user_list' %}">ユーザ管理</a>
       {% endif %}
       {% if perms.notice.add_news or perms.library.add_file %}
