class=with_mobile -> class=is-fluidに変更。login_container widthを320 -> 240

--- a/register/templates/register/menu_mobile.html
+++ b/register/templates/register/menu_mobile.html
@@ -37,7 +37,7 @@
   </div>
 </section>
 <br>
-<div class="container with_mobile">
+<div class="container is-fluid">
   <section class="sectionbox">
     <div class="is-size-5 has-text-weight-bold">
     <p>公開情報</p>
