--- a/register/templates/register/menu_pc.html
+++ b/register/templates/register/menu_pc.html
@@ -39,7 +39,7 @@
 </section>
 
 <br>
-<div class="container with_mobile">
+<div class="container is-fluid">
 {% comment %} 
   <section class="sectionbox">
     <div class="is-size-5 has-text-weight-bold">
