--- a/register/templates/register/user/update_user_form.html
+++ b/register/templates/register/user/update_user_form.html
@@ -1,6 +1,6 @@
 {% extends "base_single_page.html" %}
 {% block content %}
-<div class="container with_mobile">
+<div class="container is-fluid">
   <br>
   <div class="content">
     <form method='POST' enctype='multipart/form-data' id='form_style'>
