--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,6 @@
 {% comment %} {% load my_templatetags %} {% endcomment %}
 {% load mytag %}
-<div class="container with_mobile">
+<div class="container is-fluid">
 <nav class="pagination is-centered" role="navigation" aria-label="pagination">
   <!-- 前へ の部分 -->
   {% if page_obj.has_previous %}
