--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -25,7 +25,7 @@
 {% endblock navbar %}
 
 {% block content %}
-<div class="container with_mobile ">
+<div class="container is-fluid ">
   <br>
   <div class="content has-text-centered">
     <h4>区分所有者 ログイン</h4>
