--- a/register/templates/register/user/update_password_form.html
+++ b/register/templates/register/user/update_password_form.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <br>
-<div class="container with_mobile">
+<div class="container is-fluid">
   <div class="content has-text-centered">
     <h3>{{user.username}}</h3>
   </div>
