login.htmlのボタン色、文字色を修正

--- a/register/templates/register/login.html
+++ b/register/templates/register/login.html
@@ -48,8 +48,8 @@
     {% csrf_token %}
     <br>
     <div class='my_button has-text-centered'>
-      <button type='submit' class='button is-primary'>読込み</button>
-      <a class="button is-danger" href="{% url 'notice:news_card' %}">戻る</a>
+      <button type='submit' class='button is-success has-text-white'>ログイン</button>
+      <a class="button is-danger has-text-white" href="{% url 'notice:news_card' %}">戻る</a>
     </div>
   </form>
 </div>
