--- a/register/templates/register/menu_pc.html
+++ b/register/templates/register/menu_pc.html
@@ -93,7 +93,7 @@
       </div>
       <div class="column is-3">
         <div class="menubox has-text-centered">
-          <a href="{% url 'information:information' %}" class="white_color">インフォメーション</a>
+          <a href="{% url 'information:information' %}" class="white_color">マンション情報</a>
         </div>
       </div>
     </div>
