--- a/information/templates/information/info_manage_list.html
+++ b/information/templates/information/info_manage_list.html
@@ -26,7 +26,7 @@
 <div class="container is-fluid">
   <div class="content">
     <br>
-    <h3 class="text-center">情報ファイル一覧</h3>
+    <h3 class="text-center">マンション情報 一覧</h3>
   </div>
   <div class="container">
   <a href="{% url 'information:info_add' %}" class="button is-primary">新規作成</a>
