base.htmlでcontainer.is-fullhdに修正

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
   {% endblock %}
   <br>
   <!-- contents -->
-  <div class="container">
+  <div class="container is-fullhd">
   <main>
     <div class="columns">
       <!-- 本体 -->
@@ -41,7 +41,7 @@
       <!-- 右サイド -->
       <div class="column">
         <div class="content">
-          <table class="table is-bordered is-fullwidth">
+          <table class="table table_nowrap is-bordered is-fullwidth">
             <thead>
               <tr class="has-background-dark">
                 <th class="has-text-centered has-text-white">文書資料</th>
