--- a/register/templates/register/menu_mobile.html
+++ b/register/templates/register/menu_mobile.html
@@ -11,12 +11,15 @@
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{% url 'notice:news_card' %}">ホーム</a>
+    {% comment %}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
+    {% endcomment %}
   </div>
+  {% comment %}
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
     </div>
@@ -24,18 +27,19 @@
       <a class="navbar-item" href="javascript:void(0);" onclick="window.history.back();">戻る</a>
     </div>
   </div>
+  {% endcomment %}
 </nav>
 {% endblock %}
 
 {% block content %}
-<section class="hero is-dark">
+{% comment %} <section class="hero is-dark">
   <div class="hero-body">
     <div class="has-text-centered">
       <div class="title is-size-5"> ソフィア・ガーデンズ川崎 </div>
       <div class="subtitle is-size-6">管理組合 メニュー</div>
     </div>
   </div>
-</section>
+</section> {% endcomment %}
 <br>
 <div class="container is-fluid">
   <section class="sectionbox">
@@ -87,7 +91,7 @@
       </div>
       <div class="column">
         <div class="menubox has-text-centered">
-          <a href="{% url 'information:information' %}" class="white_color">インフォメーション</a>
+          <a href="{% url 'information:information' %}" class="white_color">マンション情報</a>
         </div>
       </div>
     </div>
