--- a/templates/403.html
+++ b/templates/403.html
@@ -8,7 +8,7 @@
 <div class="content">
   <section class="content has-text-centered">
     <div>
-        <h1>403 Forbidden 居住者専用です。</h1>
+        <h1>居住者専用です。ログインしてください。</h1>
         戻るボタンが効かない場合はブラウザの戻るボタンを押してください。
     </div>
     {% if exception %}
