--- a/overview/templates/overview/roomtype_list.html
+++ b/overview/templates/overview/roomtype_list.html
@@ -10,6 +10,7 @@
 <nav class="navbar is-fixed-top is-black is-size-6" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="{% url 'notice:news_card' %}">【SG川崎】</a>
+    <a class="navbar-item" href="{% url 'overview:overview' %}">マンション概要</a>
     {# ハンバーガアイコンのため以下の5行とbase.htmlでのjsスクリプトが必要 #}
     <a role="button" class="navbar-burger " aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
@@ -21,7 +22,7 @@
     <div class="navbar-start">
     </div>
     <div class="navbar-end">
-      <a class="navbar-item" href="{% url 'overview:overview' %}">戻る</a>
+      <a class="navbar-item" href="{% url 'notice:news_card' %}">戻る</a>
     </div>
   </div>
 </nav>
