マンション情報データ入力処理を見直した

--- a/information/templates/information/info_manage_list.html
+++ b/information/templates/information/info_manage_list.html
@@ -38,6 +38,8 @@
       <tr>
         <th class="has-text-centered">タイトル</th>
         <th class="has-text-centered">概要</th>
+        <th class="has-text-centered">表示</th>
+        <th class="has-text-centered">種別</th>
         <th class="has-text-centered">#</th>
       </tr>
     </thead>
@@ -46,6 +48,8 @@
       <tr>
         <td class="has-text-left nowrap">{{ info.title }}</td>
         <td class="has-text-left">{{ info.comment }}</td>
+        <td class="has-text-left">{{ info.display_info }}</td>
+        <td class="has-text-left">{{ info.type_name }}</td>
         <td class="has-text-left nowrap">
           <a href="{% url 'information:info_update' info.pk %}" class="button is-primary is-small">更新</a>
           <a href="{% url 'information:info_delete' info.pk %}" class="button is-danger is-small">削除</a>
