--- a/information/templates/information/information_form.html
+++ b/information/templates/information/information_form.html
@@ -25,17 +25,25 @@
 {% block content %}
 <div class="container is-fluid">
   <br>
-  <form action="" method="POST" enctype='multipart/form-data'>
-    <div class="content">
-      <table class="table is-narrow">
-        {{form}}
-      </table>
-    </div>
+  <form method='POST' enctype='multipart/form-data'>
+    {{ form.non_field_errors }}
+    {% for field in form %}
+      <div class='field'>
+        <div class='control'>
+          <div class='label'>{{ field.label_tag }}</div>
+          <div class='my_field'>{{ field }}</div>
+          {% if field.help_text %}
+            <span class='helptext'>{{ field.help_text }}</span>
+          {% endif %}
+          {{ field.errors }}
+        </div>
+      </div>
+    {% endfor %}
     {% csrf_token %}
-    <div class="content has-text-centered">
-      <button type="submit" class="button is-primary" value="send" name="action">送信する</button>
-      <button type="submit" class="button is-primary" value="send_more" name="action">送信してもう1つ追加</button>
-      <a class="button is-primary" href="javascript:void(0);" onclick="window.history.back();">戻る</a>
+    <br>
+    <div class='content has-text-centered my_button'>
+      <button type='submit' class='button is-primary'>読込み</button>
+      <a class='button is-danger' href='javascript:void(0);' onclick='window.history.back();'>キャンセル</a>
     </div>
   </form>
 </div>
