Informationクラスにsequense（表示順）を追加

--- a/information/templates/information/info_manage_list.html
+++ b/information/templates/information/info_manage_list.html
@@ -40,6 +40,7 @@
         <th class="has-text-centered">概要</th>
         <th class="has-text-centered">表示</th>
         <th class="has-text-centered">種別</th>
+        <th class="has-text-centered">表示順</th>
         <th class="has-text-centered">#</th>
       </tr>
     </thead>
@@ -50,6 +51,7 @@
         <td class="has-text-left">{{ info.comment }}</td>
         <td class="has-text-left">{{ info.display_info }}</td>
         <td class="has-text-left">{{ info.type_name }}</td>
+        <td class="has-text-right">{{ info.sequense }}</td>
         <td class="has-text-left nowrap">
           <a href="{% url 'information:info_update' info.pk %}" class="button is-primary is-small">更新</a>
           <a href="{% url 'information:info_delete' info.pk %}" class="button is-danger is-small">削除</a>
