--- a/information/templates/information/target_information.html
+++ b/information/templates/information/target_information.html
@@ -1,9 +1,11 @@
-{% extends "base_single_page.html" %}
 {% load static %}
 {% load mytag %}
 
 {% block head %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
+  <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
   <link href="{% static 'mycss/my_markdown.css' %}" rel="stylesheet">
+  <link href="{% static 'information/weasyprint.css' %}" rel="stylesheet">
 {% endblock head%}
 
 <!-- navbar -->
@@ -12,7 +14,7 @@
 
 <!-- content -->
 {% block content %}
-<div class="container">
+<div class="container page_style">
   <div class="card content">
     <header class="card-header">
       <p class="card-header-title">
