--- a/information/templates/information/mobile_information.html
+++ b/information/templates/information/mobile_information.html
@@ -4,6 +4,7 @@
 
 {% block head %}
   <link href="{% static 'mycss/my_markdown.css' %}" rel="stylesheet">
+  <link href="{% static 'mycss/mobile.css' %}" rel="stylesheet">
 {% endblock head%}
 
 <!-- navbar -->
