base.htmlをauditから移植

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,34 +3,30 @@
 <html class="has-navbar-fixed-top" lang="ja">
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico" />
+  <link rel="shortcut icon" type="image/png" href="{{STATIC_URL}}/static/favicon.ico"/>
   <link rel="apple-touch-icon-precomposed" href="{{STATIC_URL}}/static/apple-touch-icon-precomposed.png">
-
   {# css #}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
-  {% comment %} <link href="{% static 'bulma.min.css' %}" rel="stylesheet"> {% endcomment %}
   <link href="{% static 'mycss/mycss.css' %}" rel="stylesheet">
-  {% comment %}
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
-  {% endcomment %}
-  <title>{% block title %}ソフィア・ガーデンズ川崎{% endblock %}</title>
+
+  <title>
+  {% block title %}
+  {% endblock %}
+  </title>
   {% block head %}
   {% endblock %}
 </head>
 <body>
   {% block navbar %}
   {% endblock%}
-
   <!-- ヘッダー（hero) -->
   {% block header %}
   {% endblock %}
   <br>
   <!-- contents -->
   <div class="container is-fluid">
+  <!-- footerを設置する場合、<main>で囲む -->
   <main>
     <div class="columns">
       <!-- 本体 -->
@@ -71,44 +67,70 @@
       </div>
     </div>
   </main>
-  </div>
   <!-- フッタ -->
+  {# bulmaのfooter #}
   <footer class="my_footer">
     <div class="container">
       <div class="content has-text-centered">
-        <span class="text-muted">
-          &copy; 2016 -
-          <script language="JavaScript" type="text/javascript">
-            document.write(new Date().getFullYear());
-          </script>
-          ソフィア・ガーデンズ川崎 管理組合 Ver-{{VERSION_NO}}. by N.Goto
-        </span>
+        &copy; 2020- 
+        <script language="JavaScript" type="text/javascript">
+        document.write(new Date().getFullYear());
+        </script>
+        {% if debug %}
+          N.Goto Ver-{{VERSION_NO}} 開発版
+        {% else %}
+          N.Goto Ver-{{VERSION_NO}} 運用版
+        {% endif %}
       </div>
     </div>
   </footer>
+
+  {# 参考： https://bulma.io/documentation/components/navbar/ #}
+  <script>
+    // notificationを閉じれるように。
+    for (const element of document.querySelectorAll('.notification > .delete')) {
+        element.addEventListener('click', e => {
+            e.target.parentElement.classList.add('is-hidden');
+        });
+    }
+    // navbar-burgerのボタン処理。https://bulma.io/documentation/components/navbar/
+    document.addEventListener('DOMContentLoaded', () => {
+      // Get all "navbar-burger" elements
+      const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+      // Check if there are any navbar burgers
+      if ($navbarBurgers.length > 0) {
+        // Add a click event on each of them
+        $navbarBurgers.forEach( el => {
+          el.addEventListener('click', () => {
+              // Get the target from the "data-target" attribute
+            const target = el.dataset.target;
+            const $target = document.getElementById(target);
+            // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+            el.classList.toggle('is-active');
+            $target.classList.toggle('is-active');
+          });
+        });
+      }
+    });
+
+    // mobile画面でのメニュー折りたたみ用
+    // https://github.com/jgthms/bulma/issues/1567
+    // mycss.cssへの追加も必要。
+    const $navDropdowns = Array.prototype.slice.call(document.querySelectorAll(".navbar-item.has-dropdown"), 0);
+    if ($navDropdowns.length > 0) {
+        // Add a click event on each of them
+        $navDropdowns.forEach((el) => {
+            el.addEventListener("click", () => {
+                if (document.documentElement.clientWidth < 960) {
+                    // Get the target from the "data-target" attribute
+                    const target = el.dataset.target;
+                    const $target = document.getElementById(target);
+                
+                    el.classList.toggle("is-active");
+                }
+            });
+        });
+    }   
+  </script>
 </body>
 </html>
-      
-{# 参考： https://bulma.io/documentation/components/navbar/ #}
-{# ToDo ハンバーガアイコン用のjs。staticから読み込むことはできないか？ #}
-<script>
-// navbar-burgerのボタン処理。https://bulma.io/documentation/components/navbar/
-  document.addEventListener('DOMContentLoaded', () => {
-    // Get all "navbar-burger" elements
-    const $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
-    // Check if there are any navbar burgers
-    if ($navbarBurgers.length > 0) {
-      // Add a click event on each of them
-      $navbarBurgers.forEach( el => {
-        el.addEventListener('click', () => {
-          // Get the target from the "data-target" attribute
-          const target = el.dataset.target;
-          const $target = document.getElementById(target);
-          // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-          el.classList.toggle('is-active');
-          $target.classList.toggle('is-active');
-        });
-      });
-    }
-  });
-</script>
