--- a/register/templates/register/menu_pc.html
+++ b/register/templates/register/menu_pc.html
@@ -88,7 +88,7 @@
       </div>
       <div class="column is-3">
         <div class="menubox has-text-centered">
-          <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">駐車場・消火器・修繕計画</a>
+          <a href="https://facility.sophiagardens.org" target="_blank" class="white_color">共用設備・修繕計画</a>
         </div>
       </div>
       <div class="column is-3">
