--- a/register/templates/register/user/user_list.html
+++ b/register/templates/register/user/user_list.html
@@ -30,7 +30,7 @@
 {% block content %}
 <br>
 <div class="container is-fluid">
-  <div class="content has-text-centered">
+  <div class="content">
     <h4>登録ユーザ 一覧</h4>
   </div>
   <div class="content" id="form_style">
@@ -42,7 +42,7 @@
   </div>
   <br>
   <div class="table-container">
-    <table class="table table_center_nowrap is-striped is-narrow is-responsible">
+    <table class="table table_nowrap is-striped is-narrow is-responsible">
       <thead>
         <tr>
           <th class="has-text-centered">group</th>
