カレンダーをメニューから削除

--- a/notice/templates/notice/news_card_pc.html
+++ b/notice/templates/notice/news_card_pc.html
@@ -27,7 +27,7 @@
       <a class="navbar-item" href="{% url 'register:menu' %}">管理組合メニュー</a>
       <a class="navbar-item" href="{% url 'overview:overview' %}">マンション概要</a>
       {% if perms.library.view_file %}
-        <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
+        {% comment %} <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a> {% endcomment %}
         <a class="navbar-item" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a>
       {% endif %}
     </div>
