--- a/register/templates/register/menu_mobile.html
+++ b/register/templates/register/menu_mobile.html
@@ -73,11 +73,13 @@
           <a class="white_color" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a>
         </div>
       </div>
+      {% comment %}
       <div class="column">
         <div class="menubox has-text-centered">
           <a class="white_color" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a>
         </div>
       </div>
+      {% endcomment %}
     {% endif %}
       <div class="column">
         <div class="menubox has-text-centered">
