Fileクラスのis_confidentialフラグで表示制限を追加

--- a/register/templates/register/user/user_list.html
+++ b/register/templates/register/user/user_list.html
@@ -37,7 +37,8 @@
     <ul>
       <li>chairman : データ編集権限・ユーザ編集権限</li>
       <li>data_manager : データ編集権限</li>
-      <li>login : データ閲覧権限</li>
+      <li>news_manager : お知らせ（トップ画面）編集権限</li>
+      <li>sophiag : データ閲覧権限</li>
     </ul>
   </div>
   <br>
