不要なコメント部分を削除、「マンション概要」ー＞「マンション公開情報」に変更

--- a/overview/templates/overview/overview_pc.html
+++ b/overview/templates/overview/overview_pc.html
@@ -36,7 +36,7 @@
 <br>
 <div class="container is-fluid">
   <div class="content has-text-centered">
-    <h4>{{ov.name}} マンション概要</h4>
+    <h4>{{ov.name}} マンション公開情報</h4>
   </div>
   <table class="table table_center_nowrap is-narrow is-responsible is-bordered">
     <tbody>
