--- a/notice/templates/notice/news_card_pc.html
+++ b/notice/templates/notice/news_card_pc.html
@@ -25,7 +25,7 @@
   <div id="navbarMypage" class="navbar-menu">
     <div class="navbar-start">
       <a class="navbar-item" href="{% url 'register:menu' %}">管理組合メニュー</a>
-      <a class="navbar-item" href="{% url 'overview:overview' %}">マンション概要</a>
+      <a class="navbar-item" href="{% url 'overview:overview' %}">マンション公開情報</a>
       {% if perms.library.view_file %}
         {% comment %} <a class="navbar-item" href="https://calendar.sophiagardens.org" target="_blank">カレンダー</a> {% endcomment %}
         <a class="navbar-item" href="https://keijiban.sophiagardens.org" target="_blank">掲示板</a>
